# earcut-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs
examples/: example.rs
src/: int.rs  lib.rs  utils3d.rs
tests/: fixture.rs  int_fixture.rs  simple.rs
tests/fixtures/: issue186.json
