[package]
name = "earcut"
version = "0.5.0"
edition = "2024"
description = "A Rust port of the Earcut polygon triangulation library"
authors = ["Taku Fukada <naninunenor@gmail.com>"]
license = "ISC"
repository = "https://github.com/ciscorn/earcut-rs"
categories = ["graphics", "science", "no-std"]
include = [
    "/src/**/*.rs",
    "/LICENSE.txt",
    "README.md",
    "Cargo.toml",
]

[dependencies]
num-traits = { version = "0.2" }

[dev-dependencies]
serde_json = { version = "1", features = ["float_roundtrip"] }
serde = { version = "1", features = ["derive"] }
criterion = "0.8"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
